# stm32hal

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
devices/: stm32f051.yaml
src/: lib.rs
src/api/: mod.rs
templates/: gpio.rs  lib.rs  memory.x  rcc.rs
templates/gpio/: modes.rs  states.rs
templates/rcc/: peripherals.rs
